2021-04-09 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bitfields-bits1.c,
	  support/regression/tests/bitfields-bits2.c,
	  support/regression/tests/bitfields-checks.c,
	  support/regression/tests/bitfields-dead-loop.c:
	  Tests for bitfields at absolute addresses, picked from patch #373 by Visenri.

2021-04-07 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20060110-volatile.c,
	  support/regression/tests/stack-restore.c,
	  support/regression/tests/swap_add.c:
	  Improve stm8 peephole rule coverage, picked from patch #373 by Visenri.

2021-04-07 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  isRegInUse renamed to isRegDead.

2021-04-06 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  Make code more readable by adding isRegInUse.

2021-04-04 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/ports/host/spec.mk.in:
	  Timeout for host regression tests (fix bug #3209).
	* src/SDCClospre.hpp:
	  Avoid unecessary flush of cout.
	* device/lib/tlcs90/crt0.s:
	  Fix implicit initialization.
	* src/z80/ralloc2.cc:
	  Document frame pointer omission heuristic.
	* support/regression/tests/bug-3205.c:
	  Regression test for bug #3205.

2021-04-03 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/ez80_z80/crt0.s,
	  device/lib/tlcs90/crt0.s,
	  device/lib/z180/crt0.s,
	  device/lib/z80/crt0.s,
	  device/lib/z80n/crt0.s:
	  Do default-initalization in crt0 to not rely on simulator zeroing memory.
	* device/lib/gbz80/crt0.s:
	  src/z80/main.c,
	  .version:
	  Improve explicit initialization.
	* configure.ac,
	  aclocal.m4,
	  configure:
	  Improve detection of python interpreter binary.

2021-04-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc:
	  Fix bug #3207.

2021-04-02 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  Remove AOP, AOP_SIZE, AOP_TYPE macros.

2021-04-02 Sergey Belyashov <sergey.belyashov@gmail.com>
